css/style.css
html {
  /* Eliminate page shift */
  overflow-y: scroll;
}
  
body {
  margin: 0 auto;
  padding: 0 0 1em 0;
  font-size: 72.5%;
  background-color: white;
}

body, td, th, input, textarea, pre, h1, h2, h3, h4, h5, h6 { color: #222222; }
body, td, th, input, textarea { font-family: sans-serif; }
pre { font-family: monospace; }

p {
  text-align: justify;
}

a:link { 
  color: #546035; 
}
 
a:visited { 
  color: #384024; 
} 

a:link:hover, a:visited:hover { 
  color: #9caa79;
} 

a img {
  border: 0;
}

/* Containers */

#content {
  margin: 0 auto;
  padding: 0;
  min-width: 700px;
  max-width: 790px;
  width: 790px;
  clear: both;
  font-size: 1.2em;
}

#content h1 {
  color: #384024;
  margin-bottom: 0;
} 

.content_box_left { 
  width: 48%;
  float: left;
  clear: left;
}

.content_box_right {
  width: 48%;
  float: right;
  clear: right;
}

.content_box_full {
  clear: both;
}

/* Front page */

div.dlbutton {
  padding: 1em;
  margin: 1em auto;
  border: 1px solid #8dea34;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  background-color: #62a324;
  color: white;
  font-weight: bold;
  font-size: 110%;
  width: 18em;
  text-align: center;
}

div.dlbutton a {
  display: block;
  overflow: auto;
  color: white;
  text-decoration: none;
}

div.dlbutton a:hover {
  color: white;
  text-decoration: none;
}

div.dlbutton a span {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  padding: 12px;
}

div.dlbutton a:hover span {
  text-decoration: underline;
}

div.dlbutton a img {
  vertical-align: middle;
}

table.screenshot {
  margin: 0 auto;
}

table.screenshot td {
  padding: 0 5px;
}

/* Headline news */

ul.news {
  margin: 1em 0 0.5em 1em;
  padding: 0;
}

li.day {
  margin: 0.5em;
	padding: 0;
	list-style-type: none;
  clear: both;
}

ul.events {
  margin: 0 0 0 1em;
  padding: 0;
}

ul.events li {
  list-style-type: disc;
  margin: 0 0 0.5em 3.5em;
  padding-left: 0;
}

div.date {
  background: #FAF4C8;
	border-right: 1px solid #E3DE9F;
	border-bottom: 1px solid #E3DE9F;
	float: left;
  clear: both;
	text-align: center;
	line-height: 1.1em;
	padding: 2px 1px 5px 1px;
	width: 2.2em;
	margin: 0 0.5em 1em 0;
}

#news-nav {
  clear: both;
  margin: 0 0 1em 0;
  padding: 0.5em 0 0 0;
}

#news-submit {
  float: left;
}

#news-more {
  float: right;
}

div.date:first-line {
  font-size: 70%;
}

/* Donations */

div.costbox div {
  margin: 1em auto;
}

/* Downloads */

table.dl {
  margin: 1em auto;
}

table.dl td img, td span {
  vertical-align: top;
}

table.dl dt {
  font-weight: bold;
}

table.dl dd {
  margin: 0.5em 0 0.5em 0px;
  padding-left: 10px;
}

table.dl dl {
  margin-bottom: 0;
  padding: 0em 2em 1em 1em;
  display: inline-block;
}

code {
  color: blue;
}

